--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "@aws-sdk/client-secrets-manager": "^3.572.0",
+    "@langchain/core": "^0.1.62",
+    "@langchain/pinecone": "^0.0.4",
+    "@pinecone-database/pinecone": "^2.2.0",
     "langchain": "^0.1.36",
     "valibot": "^0.30.0"
   },
