--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@langchain/openai": "^0.0.28",
     "@langchain/pinecone": "^0.0.4",
     "@pinecone-database/pinecone": "^2.2.0",
+    "ignore": "^5.3.1",
     "langchain": "^0.1.36",
+    "pdf-parse": "^1.1.1",
     "valibot": "^0.30.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.0",
     "@types/node": "^20.12.11",
+    "@types/pdf-parse": "^1.1.4",
     "typescript": "^5.4.5"
   },
   "type": "module"
