--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@pinecone-database/pinecone": "^2.2.0",
     "ignore": "^5.3.1",
     "langchain": "^0.1.36",
+    "ml-distance": "^4.0.1",
     "pdf-parse": "^1.1.1",
     "valibot": "^0.30.0"
   },
